re PR debug/43370 (ICE gen_type_die_with_usage, at dwarf2out.c:14745)

PR debug/43370
	* c-common.c (handle_aligned_attribute): Respect
	ATTR_FLAG_TYPE_IN_PLACE.

From-SVN: r159083